--- a/index.html
+++ b/index.html
@@ -42,31 +42,57 @@
                         <h2>Our Featured Flowers</h2>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     </div>
+                     <div class="img">
+                        <div class="img-1" style="padding-top: 50px;">
+                            <img src="Flower Asset/pngwing 6.png" alt="">
+                        </div>
 
-                    <div class="section-content">
-                        <div class="flower-a">
-                            <div class="flower-img">
-                                <img src="Flower Asset/pngwing 6.png">
-                            </div>
-                            <p>Pink Flower Tree</p>
+
+                        <div class="img-2" style="padding-top: 100px">
+
+                            <img src="Flower Asset/pngwing 5.png" alt="">
+
                         </div>
-                        <div class="flower-b">
-                            <div class="flower-img">
-                                <img src="Flower Asset/pngwing 5.png" alt="">
-                            </div>
-                            <p>Pink Flower Tree</p>
+
+                        <div class="img-3">
+                               <img src="Flower Asset/pngwing 7.png" alt="">
                         </div>
-                        <div class="flower-c">
-                            <div class="flower-img">
-                                <img src="Flower Asset/pngwing 7.png" alt="">
-                            </div>
-                            <p>Pink Flower Tree</p>
+
+                     </div>
+
+                     <div class="img-text">
+                        <div class="text-1">
+                            <p> Pink Flower Tree</p>
                         </div>
-                    </div>
+                        <div class="text-2"  >
+                            <p> Pink Flower Tree</p>
+                        </div>
+
+                        <div class="text-3">
+                            <p> Pink Flower Tree</p>
+                        </div>
+                     </div>
+
                 </div>
         
         </section>
 
+        <section class="help-container">
+            <div class="help-img">
+                <div class="help-img-1">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                     <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="help-img-1">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                     <p>Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="help-img-1">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <p>24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
