--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
                     distribution of letters.</p>
 
-                    <button>Shop Now</button>
+                    <button class="btn">Shop Now</button>
 
             </div>
             <div class="banner-img">
