--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
             </form>
         </div>
     </div>
+
+    <section>
+
+    <div class="footer-last">
+     <h2> <span style="color: rgb(229, 84, 115) ;">Flower </span> Shop</h2>
+     <p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+     <p style="font-size: x-small; color: rgba(255, 255, 255, 0.4);">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    </div>
+
+</section>
     </footer>
     
 </body>
